# tokimo-package-subtitle-aggregator

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aggregator.rs  archive.rs  lib.rs  main.rs  models.rs
src/providers/: addic7ed.rs  animekalesi.rs  animesubinfo.rs  animetosho.rs  assrt.rs  betaseries.rs  bsplayer.rs  gestdown.rs  greeksubs.rs  greeksubtitles.rs  hosszupuska.rs  jimaku.rs  ktuvit.rs  legendasdivx.rs  legendasnet.rs  mod.rs  napiprojekt.rs  napisy24.rs  nekur.rs  opensubtitles.rs  podnapisi.rs  regielive.rs  shooter.rs  soustitreseu.rs  subdl.rs  subf2m.rs  subs4free.rs  subs4series.rs  subscenter.rs  subsource.rs  subsro.rs  subssabbz.rs  subsunacs.rs  subsynchro.rs  subtis.rs  subtitrarinoi.rs  subtitriid.rs  subtitulamostv.rs  subx.rs  supersubtitles.rs  (+12 more)
