[package]
name = "subtitle-aggregator"
version = "0.1.0"
edition = "2021"
description = "聚合多源字幕搜索与下载"

[[bin]]
name = "subtitle-aggregator"
path = "src/main.rs"

[lib]
name = "subtitle_aggregator"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
flate2 = "1"
md5 = "0.7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "cookies", "http2", "json", "rustls-tls", "stream"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6.1"
sha1 = { version = "0.10", features = ["std"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unrar = "0.5.8"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
xz2 = "0.1"
zip = "2"
